@@ -1,3 +1,7 @@
+2015-07-16  Jason Merrill  <jason@redhat.com>
+
+	* pt.c (tsubst) [TEMPLATE_TYPE_PARM]: Check tf_partial sooner.
+
 2015-07-10  Jason Merrill  <jason@redhat.com>
 
 	* call.c (build_new_method_call_1): Call reshape_init.
